# testsAndMisc

./: .binary-allowlist  .copilotignore  .fvmrc  .gitignore  .pre-commit-config.yaml  .prettierignore  .secret-patterns  CLAUDE.md  DELIVERABLES_INDEX.md  DESIGN_AUDIT_TODO.md  QUICK_REFERENCE_SHELL_QUALITY.md  README.md  README_clean_audio.md  SHELL_QUALITY_IMPLEMENTATION_SUMMARY.md  SHELL_SCRIPT_QUALITY_GUIDELINES.md  _moviepy_audio_output.py  _moviepy_clip_types.py  _moviepy_video_effects.py  batch3_bloatware_uninstall.sh  convert.sh  copyFolder.sh  eslint.config.mjs  fix_unity.sh  install.sh  install_unity_mcp.sh  lint_python.sh  moviepy_showcase.py  out.json  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.sh
.githooks/: pre-commit
.github/: BRANCH_PROTECTION.md  copilot-instructions.md
.github/workflows/: pre-commit.yml  python-tests.yml  shell-check.yml  shell-tests.yml
.hippo/: embeddings.json  index.json  stats.json
.hippo/episodic/: mem_009df4aeb6ab.md  mem_0413132ca050.md  mem_062572981e0a.md  mem_06b392ce465c.md  mem_07a4f145e6ae.md  mem_094898025890.md  mem_0b9ae633642c.md  mem_0c7b164718b6.md  mem_0e9160971654.md  mem_0fb17ba64df0.md  mem_11b2ad453301.md  mem_122ef7bf313c.md  mem_125c8ece53df.md  mem_152270bcab1b.md  mem_15e2fe11e995.md  mem_163795a79c49.md  mem_16713f31cf04.md  mem_176b47f44766.md  mem_180b57474f00.md  mem_183dbbdd73fa.md  mem_1bd873a35f09.md  mem_21934645dbcd.md  mem_249e5bc0d8e3.md  mem_25b0f0c20e0b.md  mem_276a8bc7b85f.md  mem_290eb44638f2.md  mem_29608be2f198.md  mem_2d7459650787.md  mem_2e2fdd49bee8.md  mem_2ee60f6893c5.md  mem_2efe9d90db13.md  mem_2fde60450260.md  mem_311d12899318.md  mem_313d9df77fd0.md  mem_351aa609d2b2.md  mem_355c3898b68c.md  mem_36d35775f563.md  mem_386f50ead43a.md  mem_3b8b4ef3a1f0.md  mem_3cdc0e50ff89.md  (+118 more)
Bash/: .gitignore  clean_audio.sh  compress_images.sh  convert.sh  download.sh  fix_thorium_unity.sh  generate_subfolders.sh  get_rnnoise_model.sh  install_ffmpeg_with_arnndn.sh  libre_translate.sh  mcp_readme.md
Bash/tools/: transcribe_fw.py
C/: .clang-format  .clang-tidy  .gitignore  compile_commands.json  cppcheck.txt  flawfinder.txt  lint_all.sh
C/1dvelocitysimulator/: LICENSE  Makefile  main.c  physics.c  physics.h  run.sh  test_physics.c
C/atop_agg/: atop_agg.c  run.sh  test_atop_agg.c
LaTeX/: .gitignore  main.tex  mauin2.tex
PYTHON/: .gitignore
SFMLEngine/: readme.md
articles/: Makefile  README.md  cppcheck.txt  index.html  run.sh  server.py  server_c.c  sw.js  test_server_api.py  test_site_size.py
bucket_catch/: .gitignore  package.json  pnpm-lock.yaml
cloud_gallery/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
docs/: SUMMARY.md  VERIFICATION.md  mcp-shortlist.html
dungeonWorld/: a.out  dungeonWorld.cpp
fresh-install/: README.md  aur_packages.txt  detect_gpu.sh  detect_gpu_and_install.sh  install_amd_driver.sh  install_intel_driver.sh  install_nvidia_driver.sh  main.sh  pacman.conf  pacman_packages.txt
horatio/: .gitignore  analysis_options.yaml  dead_code.sh  deploy.sh  melos.yaml  run.sh
hosts/: hosts  install.sh
i3/: config
i3-configuration/: install.sh
i3blocks/: battery_status.sh  bluetooth.sh  config  cpu_gpu_monitor.sh  cpu_monitor.sh  gpu_monitor.sh  motherboard_temp.sh  network_monitor.sh  volume.sh  wifi_monitor.sh
kcd2_dice_solver/: README.md  index.html  package.json  pnpm-lock.yaml  run.sh  tsconfig.json  vite.config.ts
leechblock/: LeechBlockOptions.txt
linux_configuration/: .gitignore  install_core_system.sh
makepkg/: install.sh  makepkg.conf
meta/: .pre-commit-config.yaml  lint_python.sh  pyproject.toml  requirements.txt  run.sh
meta/scripts/: _schema_validation.py  check_agent_contract.sh  check_ai_evidence.sh  check_append_only_sessions.sh  check_no_binaries.sh  check_no_dufs_conf.sh  check_polling_antipatterns.sh  check_python_location.sh  check_requirements_sync.py  ci_mirror.sh  disk_cleanup_check.sh  optimize_vscode.py  pytest_changed_packages.py  run_prettier_capped.sh  validate_contract.py  validate_evidence.py
phone_focus_mode/: README.md  backup_manifest.sh  batch3_bloatware_uninstall.sh  config.sh  curfew_enforcer.sh  deploy.sh  dns_enforcer.sh  focus_ctl.sh  focus_daemon.sh  hosts_enforcer.sh  launcher_enforcer.sh  magisk_service.sh  run_phone.sh  strip_workout_hosts.py  tether_enforcer.sh  workout_detector.sh
poker-modifier-app/: README.md  README_python.md  index.html  poker_modifier_app.py  script.js  style.css
poker_modifier_app/: README.md  __init__.py  _poker_gui.py  _poker_modifiers.py  poker_modifier_app.py  style.css
pomodoro_app/: .metadata  analysis_options.yaml  pubspec.yaml
puzzle_solver/: __init__.py  __main__.py  main.py  parse_image.py  solver.py
python_pkg/: .gitignore  __init__.py  conftest.py  geo_data.py  preview_all.html
report/: jscpd-report.json
robotgo_demo/: .gitignore  README.md  go.mod  main.go
scripts/: check_agent_contract.sh  check_ai_evidence.sh  check_and_enable_services.sh  check_c_cpp_build_files.sh  check_no_binaries.sh  check_no_secrets.sh  check_polling_antipatterns.sh  check_python_location.sh  control_from_mobile.sh  convert_words.sh  init_agent_artifacts.sh  install_leechblock.sh  install_leechblock_origin.sh  install_pacman_wrapper.sh  makepkg-manual-dlagent.sh  nvidia_troubleshoot.sh  organize_downloads.sh  pacman_blocked_keywords.txt  pacman_whitelist.txt  pacman_wrapper.sh  pc_startup_visual_status.sh  pytest_changed_packages.py  remove_guest_mode.sh  setup_media_organizer.sh  setup_midnight_shutdown.sh  setup_passwordless_system.sh  setup_pc_startup_monitor.sh  setup_periodic_system.sh  setup_thorium_startup.sh  sort_downloads.sh  steam_compatiblity.sh  test_bad.sh  test_removal.sh  toggle_mic.sh  toggle_wheel.sh  toggle_window_manager.sh  turn_off_auto_idle_screen_shutdown.sh
sonic_pi/: chill_track.rb  run.sh
tagDivider/: README.md  tagDivider.py
tests/: test_engine_bxf2_avoid.py  test_file_length.py  test_pacman_wrapper_security.sh
(+2016 files in other folders)
